--- a/package.json
+++ b/package.json
@@ -1,27 +1,25 @@
 {
-  "name": "sql-sandbox",
+  "name": "burger-logger-",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/kylewhittemore/sql-sandbox.git"
+    "url": "git+https://github.com/megan-pg/burger-logger-.git"
   },
-  "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/kylewhittemore/sql-sandbox/issues"
+    "url": "https://github.com/megan-pg/burger-logger-/issues"
   },
-  "homepage": "https://github.com/kylewhittemore/sql-sandbox#readme",
+  "homepage": "https://github.com/megan-pg/burger-logger-#readme",
   "dependencies": {
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "mysql": "^2.17.1",
-    "nodemon": "^2.0.2"
+    "mysql": "^2.18.1"
   }
 }
